force-app/main/default/objects/Job__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>