force-app/main/default/objects/Job__c/fields/salary_range__c.field-meta.xml
<CustomField>
    <fullName>salary_range__c</fullName>
    <label>salary range</label>
    <length>15</length>
    <type>Text</type>
</CustomField>