force-app/main/default/objects/Job__c/recordTypes/Full_Time_Job.recordType-meta.xml
<RecordType>
    <fullName>Full_Time_Job</fullName>
    <active>true</active>
    <label>Full-Time Job</label>
</RecordType>