force-app/main/default/objects/Job__c/validationRules/Salary_Range_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Range_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( salary_range__c )</errorConditionFormula>
    <errorDisplayField>salary_range__c</errorDisplayField>
    <errorMessage>enter salary range crctly for all job postings</errorMessage>
</ValidationRule>